2001-09-22  Elliot Glaysher  <glaysher@umich.edu>

	* Netcomics/HTML/Themes/Default.pm (new): Switched over to the new
	inherited theme system.
	* Netcomics/HTML.pm (create_toplevel_page_set): Added function.
	Basically create_basic_page_set with special conditions.
	* netcomics: Have netcomics use the new create_toplevel_page_set()
	for toplevel pages instead of create_basic_page_set().
	* Netcomics/HTML/Set.pm (create_set_of_pages): Changed 'group_num' to
	'group_number' in every instance. A small bug was being caused by
	inconsistent usage of both in both Set.pm and Page.pm.
	(new): Added new default property, 'link_to_local_archives' => 0.
	(create_set_of_pages): Pass the new preperty to Page.pm.
	(create_set_of_pages): Changed every instance of
	$self->{'theme'}->{'*'} to $self->{'theme'}->{'html'}{'head'} per
	Ben's suggestion.
	* Netcomics/Config.pm.in: Strange construct was causing bug. Fixed
	now. (Seems to be related to how -i was supposed to catch -I. Or not
	catch it, as the case seemed)
	* Netcomics/HTML/Page.pm (generate): Fixed REALLY DUMB bug screwing
	up URLs.
	(generate): Changed numerous stupid instances of 'group_num' to
	'group_number'
	(generate): Changed every instance of $self->{'theme'}->{'html'}{'*'}
	per Ben's suggestion.

	* AUTHORS: Corrected email address.
	* debian/changelog: Corrected email address.
	* INSTALL: Updated Debian build instructions.
	* NEWS: Updated the news.

2001-09-20  Elliot Glaysher  <glaysher@umich.edu>

	* lib/doemain: Updated and corrected.
	* Netcomics/Factory.pm (get_comics): Check to see if "dummy" was 
	returned.	
	* Netcomics/HTML.pm (create_archive_webpages): Check to make sure
	$rli->{'proc'} is defined before trying to operate on it.
	* TODO: Updated so things done are now "done".

2001-09-19  Elliot Glaysher  <glaysher@umich.edu>

	* Netcomics/HTML/Themes/Default.pm: Updated so it makes prettier
	HTML.

2001-09-19  Ben Hochstedler  <hochstrb@cs.rose-hulman.edu>
